new pmic - apha version

--- a/kode_bq25896/CMakeLists.txt
+++ b/kode_bq25896/CMakeLists.txt
@@ -1,3 +1,5 @@
-idf_component_register(SRCS "kode_bq25896.c"
-                    INCLUDE_DIRS "include"
-                    REQUIRES driver esp_driver_i2c freertos esp_common)
+idf_component_register(
+    SRCS "kode_bq25896.c"
+    INCLUDE_DIRS "include"
+    REQUIRES driver
+)
